--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,6 @@
 <h1>タスク新規作成ページ</h1>
 
-<%= form for(@task) do |f| %>
+<%= form_for(@task) do |f| %>
 
 
 <%= f.label :content, 'タスク' %>
@@ -14,6 +14,6 @@
 <% end %>
 
 
-<%= link_to '一覧に戻る', task_path %>
+<%= link_to '一覧に戻る', tasks_path %>
 
 
