--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,27 +1,41 @@
-<h1>タスク一覧</h1>
+<% if logged_in? %>
 
-<% if @tasks.any? %>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>id</th>
-                <th>ステータス</th>
-                <th>タスク</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% @tasks.each do |task| %>
-            <tr>
-                <td><%= link_to task.id, task %></td>
-                <td><%= task.status %></td>
-                <td><%= task.content %></td>
-            </tr>
-        <% end %>
-        </tbody>
-    </table>
-    <div>
-        <%= paginate @tasks %>
+    <h1>タスク一覧</h1>
+    
+    <% if @tasks.any? %>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>id</th>
+                    <th>ステータス</th>
+                    <th>タスク</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% @tasks.each do |task| %>
+                <tr>
+                    <td><%= link_to task.id, task %></td>
+                    <td><%= task.status %></td>
+                    <td><%= task.content %></td>
+                </tr>
+            <% end %>
+            </tbody>
+        </table>
+        <div>
+            <%= paginate @tasks %>
+        </div>
+    <% end %>
+    
+    <%= link_to '新規タスクの投稿', new_task_path, class: "btn btn-primary" %>
+    
+<% else %>    
+    
+    <div class="center jumbotron">
+      <div class="text-center">
+        <h1>Welcome to the Tasklist</h1>
+        <div class="center jumbotron">
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+      </div>
     </div>
-<% end %>
 
-<%= link_to '新規タスクの投稿', new_task_path, class: "btn btn-primary" %>
+<% end %>
